--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,26 +1,25 @@
-<!DOCTYPE html >
-<HTML lang = "en" >
-   <HEAD >
-        <TITLE > HBNB < /TITLE >
-    < /HEAD >
-    <BODY >
-        {%if all is defined %}
-        <H1 > States</H1>
-           <UL >
-              {%for State in all.values() | sort(attribute='name')%}
-                <LI > {{State['id']}}: <B>{{State['name']}}</B></LI>
-                { % endfor % }
-            < /UL >
-        {%elif element is defined %}
-        <H1 > States: {{element['name']}}</H1>
-        <H3 > Cities:</H3>
-           <UL >
-              {%for city in element.cities | sort(attribute='name')%}
-                    <LI > {{city.id}}: <B>{{city.name}}</B></LI>
-                    {% endfor%}
-            < /UL >
-        {%else %}
-        <H1 > Not found!</H1>
-        { % endif % }
-    < /BODY >
-< /HTML >
+<!DOCTYPE html>
+<HTML lang="en">
+  <HEAD>
+    <TITLE>HBNB</TITLE>
+  </HEAD>
+  <BODY>
+    {% if id == '0' %}
+    <H1>States</H1>
+    <UL>
+      {% for state in states|sort(attribute='name') %}
+      <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+      {% endfor %}
+    </UL>
+    {% else %}
+    {% for state in states if state.id == id %}<H1>State: {{ state.name }}</H1>
+    <H3>Cities:</H3>
+    <UL>
+      {% for city in state.cities|sort(attribute='name') %}
+      <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+      {% endfor %}
+    </UL>
+    {% else %}<H1>Not found!</H1>{% endfor %}
+    {% endif %}
+  </BODY>
+</HTML>
